Added amble language server. Thus far enables go-to-def / find-references for Rooms, Items, and NPCs. Binaary works but source is currently broken.

--- a/languages/amble/config.toml
+++ b/languages/amble/config.toml
@@ -2,6 +2,7 @@ name = "Amble"
 grammar = "amble"
 path_suffixes = ["amble"]
 line_comments = ["# "]
+language_servers = ["amble-lsp"]
 autoclose_before = ";:.,=}])>"
 tab_size = 4
 brackets = [
